After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794293 - undefined reference to `_pixel_transformer_apply_transformations'
undefined reference to `_pixel_transformer_apply_transformations'
Status: RESOLVED FIXED
Product: shotwell
Classification: Other
Component: build
0.28.x
Other All
: Normal major
: ---
Assigned To: Shotwell Maintainers
Shotwell Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-03-13 15:03 UTC by Antoine Jacoutot
Modified: 2018-03-17 15:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix undefined symbol error (1.08 KB, patch)
2018-03-13 20:36 UTC, Jens Georg
none Details | Review

Description Antoine Jacoutot 2018-03-13 15:03:44 UTC
Hi.

On OpenBSD, building shotwell-0.28.0 with clang/llvm 5.0.1 fails with the following error (builds fine with gcc):

/usr/bin/libtool  --tag=CC   --mode=link cc -I/usr/local/include/gee-0.8 -I/usr/local/include -pthread -I/usr/local/include/gstreamer-1.0 -I/usr/local/include/gtk-3.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/at-spi-2.0 -I/usr/local/include/dbus-1.0 -I/usr/local/lib/dbus-1.0/include -I/usr/local/include/gio-unix-2.0/ -I/usr/X11R6/include -I/usr/local/include/cairo -I/usr/local/include/pango-1.0 -I/usr/local/include/harfbuzz -I/usr/local/include/atk-1.0 -I/usr/X11R6/include/pixman-1 -I/usr/X11R6/include/freetype2 -I/usr/local/include/libpng16 -I/usr/local/include/gdk-pixbuf-2.0 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include/gphoto2 -I/usr/local/include/libexif -I/usr/local/include/libraw -I/usr/local/include/libxml2  -I./vapi -D_PREFIX='"/usr/local"' -Wno-incompatible-pointer-types -Wno-discarded-qualifiers -D_VERSION='"0.28.0"' -DGETTEXT_PACKAGE='"shotwell"' -D_LANG_SUPPORT_DIR='"/usr/local/share/locale"' -D_LIBEXECDIR='"/usr/local/libexec"' -D_LIB='"/usr/local/lib"' -Wno-incompatible-pointer-types -Wno-discarded-qualifiers -D_GIT_VERSION='"ecaf52c6dddb02a0c7c92c96ae9869025037465b"' -I./plugins -I/hack/objdirs/pobj/shotwell-0.28.0/shotwell-0.28.0/plugins -I/hack/objdirs/pobj/shotwell-0.28.0/shotwell-0.28.0/src -O2 -pipe  -L/usr/local/lib -o shotwell src/unit/shotwell-Unit.o src/util/shotwell-Util.o src/util/shotwell-file.o src/util/shotwell-image.o src/util/shotwell-misc.o src/util/shotwell-string.o src/util/shotwell-system.o src/util/shotwell-ui.o src/threads/shotwell-Threads.o src/threads/shotwell-Workers.o src/threads/shotwell-BackgroundJob.o src/threads/shotwell-Semaphore.o src/db/shotwell-Db.o src/db/shotwell-DatabaseTable.o src/db/shotwell-PhotoTable.o src/db/shotwell-EventTable.o src/db/shotwell-TagTable.o src/db/shotwell-TombstoneTable.o src/db/shotwell-VideoTable.o src/db/shotwell-VersionTable.o src/db/shotwell-SavedSearchDBTable.o src/dialogs/shotwell-Preferences.o src/dialogs/shotwell-EntryMultiCompletion.o src/dialogs/shotwell-ExportDialog.o src/dialogs/shotwell-TextEntry.o src/dialogs/shotwell-WelcomeDialog.o src/dialogs/shotwell-MultiTextEntryDialog.o src/dialogs/shotwell-AdjustDateTimeDialog.o src/dialogs/shotwell-SetBackground.o src/dialogs/shotwell-ProgressDialog.o src/dialogs/shotwell-SetBackgroundSlideshow.o src/editing_tools/shotwell-EditingTools.o src/editing_tools/shotwell-RGBHistogramManipulator.o src/editing_tools/shotwell-StraightenTool.o src/slideshow/shotwell-Slideshow.o src/slideshow/shotwell-TransitionEffects.o src/photos/shotwell-Photos.o src/photos/shotwell-PhotoFileAdapter.o src/photos/shotwell-PhotoFileFormat.o src/photos/shotwell-PhotoFileSniffer.o src/photos/shotwell-PhotoMetadata.o src/photos/shotwell-GRaw.o src/photos/shotwell-GdkSupport.o src/photos/shotwell-JfifSupport.o src/photos/shotwell-BmpSupport.o src/photos/shotwell-RawSupport.o src/photos/shotwell-PngSupport.o src/photos/shotwell-TiffSupport.o src/plugins/shotwell-Plugins.o src/plugins/shotwell-StandardHostInterface.o src/plugins/shotwell-ManifestWidget.o src/publishing/shotwell-Publishing.o src/publishing/shotwell-PublishingUI.o src/publishing/shotwell-PublishingPluginHost.o src/publishing/shotwell-APIGlue.o src/library/shotwell-Library.o src/library/shotwell-LibraryWindow.o src/library/shotwell-LibraryBranch.o src/library/shotwell-TrashSidebarEntry.o src/library/shotwell-OfflineSidebarEntry.o src/library/shotwell-FlaggedSidebarEntry.o src/library/shotwell-LastImportSidebarEntry.o src/library/shotwell-ImportQueueSidebarEntry.o src/library/shotwell-FlaggedPage.o src/library/shotwell-ImportQueuePage.o src/library/shotwell-LastImportPage.o src/library/shotwell-OfflinePage.o src/library/shotwell-TrashPage.o src/direct/shotwell-Direct.o src/direct/shotwell-DirectWindow.o src/direct/shotwell-DirectPhoto.o src/direct/shotwell-DirectPhotoPage.o src/direct/shotwell-DirectView.o src/core/shotwell-Core.o src/core/shotwell-DataCollection.o src/core/shotwell-DataSet.o src/core/shotwell-util.o src/core/shotwell-SourceCollection.o src/core/shotwell-SourceHoldingTank.o src/core/shotwell-DatabaseSourceCollection.o src/core/shotwell-ContainerSourceCollection.o src/core/shotwell-ViewCollection.o src/core/shotwell-DataObject.o src/core/shotwell-Alteration.o src/core/shotwell-DataSource.o src/core/shotwell-DataSourceTypes.o src/core/shotwell-DataView.o src/core/shotwell-DataViewTypes.o src/core/shotwell-Tracker.o src/core/shotwell-SourceInterfaces.o src/sidebar/shotwell-Sidebar.o src/sidebar/shotwell-Branch.o src/sidebar/shotwell-Entry.o src/sidebar/shotwell-Tree.o src/sidebar/shotwell-common.o src/events/shotwell-Events.o src/events/shotwell-EventsBranch.o src/events/shotwell-EventsDirectoryPage.o src/events/shotwell-EventPage.o src/events/shotwell-EventDirectoryItem.o src/tags/shotwell-Tags.o src/tags/shotwell-TagsBranch.o src/tags/shotwell-TagPage.o src/tags/shotwell-HierarchicalTagIndex.o src/tags/shotwell-HierarchicalTagUtilities.o src/camera/shotwell-Camera.o src/camera/shotwell-CameraBranch.o src/camera/shotwell-CameraTable.o src/camera/shotwell-GPhoto.o src/camera/shotwell-ImportPage.o src/searches/shotwell-Searches.o src/searches/shotwell-SearchesBranch.o src/searches/shotwell-SearchBoolean.o src/searches/shotwell-SavedSearchPage.o src/searches/shotwell-SavedSearchDialog.o src/config/shotwell-Config.o src/config/shotwell-ConfigurationInterfaces.o src/config/shotwell-GSettingsEngine.o src/data_imports/shotwell-DataImports.o src/data_imports/shotwell-DataImportsPluginHost.o src/data_imports/shotwell-DataImportsUI.o src/data_imports/shotwell-DataImportJob.o src/data_imports/shotwell-DataImportSource.o src/folders/shotwell-Folders.o src/folders/shotwell-FoldersBranch.o src/folders/shotwell-FoldersPage.o src/shotwell-main.o src/shotwell-AppWindow.o src/shotwell-CollectionPage.o src/shotwell-NaturalCollate.o src/shotwell-Thumbnail.o src/shotwell-ThumbnailCache.o src/shotwell-CheckerboardLayout.o src/shotwell-PhotoPage.o src/shotwell-Page.o src/shotwell-SortedList.o src/shotwell-Dimensions.o src/shotwell-Box.o src/shotwell-Photo.o src/shotwell-Orientation.o src/shotwell-BatchImport.o src/shotwell-Dialogs.o src/shotwell-Resources.o src/shotwell-Debug.o src/shotwell-Properties.o src/shotwell-Event.o src/shotwell-International.o src/shotwell-AppDirs.o src/shotwell-PixbufCache.o src/shotwell-CommandManager.o src/shotwell-Commands.o src/shotwell-SlideshowPage.o src/shotwell-LibraryFiles.o src/shotwell-Printing.o src/shotwell-Tag.o src/shotwell-Screensaver.o src/shotwell-Exporter.o src/shotwell-DirectoryMonitor.o src/shotwell-LibraryMonitor.o src/shotwell-VideoSupport.o src/shotwell-Tombstone.o src/shotwell-MetadataWriter.o src/shotwell-Application.o src/shotwell-TimedQueue.o src/shotwell-MediaPage.o src/shotwell-MediaDataRepresentation.o src/shotwell-DesktopIntegration.o src/shotwell-MediaInterfaces.o src/shotwell-MediaMetadata.o src/shotwell-VideoMetadata.o src/shotwell-MediaMonitor.o src/shotwell-PhotoMonitor.o src/shotwell-VideoMonitor.o src/shotwell-SearchFilter.o src/shotwell-MediaViewTracker.o src/shotwell-UnityProgressBar.o src/shotwell-Upgrades.o src/.unitize/shotwell-_UnitInternals.o src/.unitize/shotwell-_UtilInternals.o src/.unitize/shotwell-_ThreadsInternals.o src/.unitize/shotwell-_DbInternals.o src/.unitize/shotwell-_EditingToolsInternals.o src/.unitize/shotwell-_PluginsInternals.o src/.unitize/shotwell-_SlideshowInternals.o src/.unitize/shotwell-_PhotosInternals.o src/.unitize/shotwell-_PublishingInternals.o src/.unitize/shotwell-_LibraryInternals.o src/.unitize/shotwell-_DirectInternals.o src/.unitize/shotwell-_CoreInternals.o src/.unitize/shotwell-_SidebarInternals.o src/.unitize/shotwell-_EventsInternals.o src/.unitize/shotwell-_TagsInternals.o src/.unitize/shotwell-_CameraInternals.o src/.unitize/shotwell-_SearchesInternals.o src/.unitize/shotwell-_ConfigInternals.o src/.unitize/shotwell-_DataImportsInternals.o src/.unitize/shotwell-_FoldersInternals.o src/.unitize/shotwell-_Library_unitize_entry.o src/.unitize/shotwell-_Direct_unitize_entry.o shotwell-resource.o src/plugins/libplugin.la src/libgraphics-processor.la -L/usr/local/lib -Wl,-E -pthread -Wl,-rpath-link,/usr/X11R6/lib -lgee-0.8 -lgexiv2 -lgmodule-2.0 -lgstbase-1.0 -lgstpbutils-1.0 -lgstreamer-1.0 -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -lintl -lexif -lgphoto2 -lgphoto2_port -lm -lraw -lstdc++ -llcms2 -lxml2 -lsqlite3  
libtool: link: cc -o shotwell -pthread -I/usr/local/include/gee-0.8 -I/usr/local/include -I/usr/local/include/gstreamer-1.0 -I/usr/local/include/gtk-3.0 -I/usr/local/include/at-spi2-atk/2.0 -I/usr/local/include/at-spi-2.0 -I/usr/local/include/dbus-1.0 -I/usr/local/lib/dbus-1.0/include -I/usr/local/include/gio-unix-2.0/ -I/usr/X11R6/include -I/usr/local/include/cairo -I/usr/local/include/pango-1.0 -I/usr/local/include/harfbuzz -I/usr/local/include/atk-1.0 -I/usr/X11R6/include/pixman-1 -I/usr/X11R6/include/freetype2 -I/usr/local/include/libpng16 -I/usr/local/include/gdk-pixbuf-2.0 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include/gphoto2 -I/usr/local/include/libexif -I/usr/local/include/libraw -I/usr/local/include/libxml2 -I./vapi -D_PREFIX="/usr/local" -Wno-incompatible-pointer-types -Wno-discarded-qualifiers -D_VERSION="0.28.0" -DGETTEXT_PACKAGE="shotwell" -D_LANG_SUPPORT_DIR="/usr/local/share/locale" -D_LIBEXECDIR="/usr/local/libexec" -D_LIB="/usr/local/lib" -Wno-incompatible-pointer-types -Wno-discarded-qualifiers -D_GIT_VERSION="ecaf52c6dddb02a0c7c92c96ae9869025037465b" -I./plugins -I/hack/objdirs/pobj/shotwell-0.28.0/shotwell-0.28.0/plugins -I/hack/objdirs/pobj/shotwell-0.28.0/shotwell-0.28.0/src -O2 -pipe -Wl,-E -Wl,-rpath-link -Wl,/usr/X11R6/lib src/unit/shotwell-Unit.o src/util/shotwell-Util.o src/util/shotwell-file.o src/util/shotwell-image.o src/util/shotwell-misc.o src/util/shotwell-string.o src/util/shotwell-system.o src/util/shotwell-ui.o src/threads/shotwell-Threads.o src/threads/shotwell-Workers.o src/threads/shotwell-BackgroundJob.o src/threads/shotwell-Semaphore.o src/db/shotwell-Db.o src/db/shotwell-DatabaseTable.o src/db/shotwell-PhotoTable.o src/db/shotwell-EventTable.o src/db/shotwell-TagTable.o src/db/shotwell-TombstoneTable.o src/db/shotwell-VideoTable.o src/db/shotwell-VersionTable.o src/db/shotwell-SavedSearchDBTable.o src/dialogs/shotwell-Preferences.o src/dialogs/shotwell-EntryMultiCompletion.o src/dialogs/shotwell-ExportDialog.o src/dialogs/shotwell-TextEntry.o src/dialogs/shotwell-WelcomeDialog.o src/dialogs/shotwell-MultiTextEntryDialog.o src/dialogs/shotwell-AdjustDateTimeDialog.o src/dialogs/shotwell-SetBackground.o src/dialogs/shotwell-ProgressDialog.o src/dialogs/shotwell-SetBackgroundSlideshow.o src/editing_tools/shotwell-EditingTools.o src/editing_tools/shotwell-RGBHistogramManipulator.o src/editing_tools/shotwell-StraightenTool.o src/slideshow/shotwell-Slideshow.o src/slideshow/shotwell-TransitionEffects.o src/photos/shotwell-Photos.o src/photos/shotwell-PhotoFileAdapter.o src/photos/shotwell-PhotoFileFormat.o src/photos/shotwell-PhotoFileSniffer.o src/photos/shotwell-PhotoMetadata.o src/photos/shotwell-GRaw.o src/photos/shotwell-GdkSupport.o src/photos/shotwell-JfifSupport.o src/photos/shotwell-BmpSupport.o src/photos/shotwell-RawSupport.o src/photos/shotwell-PngSupport.o src/photos/shotwell-TiffSupport.o src/plugins/shotwell-Plugins.o src/plugins/shotwell-StandardHostInterface.o src/plugins/shotwell-ManifestWidget.o src/publishing/shotwell-Publishing.o src/publishing/shotwell-PublishingUI.o src/publishing/shotwell-PublishingPluginHost.o src/publishing/shotwell-APIGlue.o src/library/shotwell-Library.o src/library/shotwell-LibraryWindow.o src/library/shotwell-LibraryBranch.o src/library/shotwell-TrashSidebarEntry.o src/library/shotwell-OfflineSidebarEntry.o src/library/shotwell-FlaggedSidebarEntry.o src/library/shotwell-LastImportSidebarEntry.o src/library/shotwell-ImportQueueSidebarEntry.o src/library/shotwell-FlaggedPage.o src/library/shotwell-ImportQueuePage.o src/library/shotwell-LastImportPage.o src/library/shotwell-OfflinePage.o src/library/shotwell-TrashPage.o src/direct/shotwell-Direct.o src/direct/shotwell-DirectWindow.o src/direct/shotwell-DirectPhoto.o src/direct/shotwell-DirectPhotoPage.o src/direct/shotwell-DirectView.o src/core/shotwell-Core.o src/core/shotwell-DataCollection.o src/core/shotwell-DataSet.o src/core/shotwell-util.o src/core/shotwell-SourceCollection.o src/core/shotwell-SourceHoldingTank.o src/core/shotwell-DatabaseSourceCollection.o src/core/shotwell-ContainerSourceCollection.o src/core/shotwell-ViewCollection.o src/core/shotwell-DataObject.o src/core/shotwell-Alteration.o src/core/shotwell-DataSource.o src/core/shotwell-DataSourceTypes.o src/core/shotwell-DataView.o src/core/shotwell-DataViewTypes.o src/core/shotwell-Tracker.o src/core/shotwell-SourceInterfaces.o src/sidebar/shotwell-Sidebar.o src/sidebar/shotwell-Branch.o src/sidebar/shotwell-Entry.o src/sidebar/shotwell-Tree.o src/sidebar/shotwell-common.o src/events/shotwell-Events.o src/events/shotwell-EventsBranch.o src/events/shotwell-EventsDirectoryPage.o src/events/shotwell-EventPage.o src/events/shotwell-EventDirectoryItem.o src/tags/shotwell-Tags.o src/tags/shotwell-TagsBranch.o src/tags/shotwell-TagPage.o src/tags/shotwell-HierarchicalTagIndex.o src/tags/shotwell-HierarchicalTagUtilities.o src/camera/shotwell-Camera.o src/camera/shotwell-CameraBranch.o src/camera/shotwell-CameraTable.o src/camera/shotwell-GPhoto.o src/camera/shotwell-ImportPage.o src/searches/shotwell-Searches.o src/searches/shotwell-SearchesBranch.o src/searches/shotwell-SearchBoolean.o src/searches/shotwell-SavedSearchPage.o src/searches/shotwell-SavedSearchDialog.o src/config/shotwell-Config.o src/config/shotwell-ConfigurationInterfaces.o src/config/shotwell-GSettingsEngine.o src/data_imports/shotwell-DataImports.o src/data_imports/shotwell-DataImportsPluginHost.o src/data_imports/shotwell-DataImportsUI.o src/data_imports/shotwell-DataImportJob.o src/data_imports/shotwell-DataImportSource.o src/folders/shotwell-Folders.o src/folders/shotwell-FoldersBranch.o src/folders/shotwell-FoldersPage.o src/shotwell-main.o src/shotwell-AppWindow.o src/shotwell-CollectionPage.o src/shotwell-NaturalCollate.o src/shotwell-Thumbnail.o src/shotwell-ThumbnailCache.o src/shotwell-CheckerboardLayout.o src/shotwell-PhotoPage.o src/shotwell-Page.o src/shotwell-SortedList.o src/shotwell-Dimensions.o src/shotwell-Box.o src/shotwell-Photo.o src/shotwell-Orientation.o src/shotwell-BatchImport.o src/shotwell-Dialogs.o src/shotwell-Resources.o src/shotwell-Debug.o src/shotwell-Properties.o src/shotwell-Event.o src/shotwell-International.o src/shotwell-AppDirs.o src/shotwell-PixbufCache.o src/shotwell-CommandManager.o src/shotwell-Commands.o src/shotwell-SlideshowPage.o src/shotwell-LibraryFiles.o src/shotwell-Printing.o src/shotwell-Tag.o src/shotwell-Screensaver.o src/shotwell-Exporter.o src/shotwell-DirectoryMonitor.o src/shotwell-LibraryMonitor.o src/shotwell-VideoSupport.o src/shotwell-Tombstone.o src/shotwell-MetadataWriter.o src/shotwell-Application.o src/shotwell-TimedQueue.o src/shotwell-MediaPage.o src/shotwell-MediaDataRepresentation.o src/shotwell-DesktopIntegration.o src/shotwell-MediaInterfaces.o src/shotwell-MediaMetadata.o src/shotwell-VideoMetadata.o src/shotwell-MediaMonitor.o src/shotwell-PhotoMonitor.o src/shotwell-VideoMonitor.o src/shotwell-SearchFilter.o src/shotwell-MediaViewTracker.o src/shotwell-UnityProgressBar.o src/shotwell-Upgrades.o src/.unitize/shotwell-_UnitInternals.o src/.unitize/shotwell-_UtilInternals.o src/.unitize/shotwell-_ThreadsInternals.o src/.unitize/shotwell-_DbInternals.o src/.unitize/shotwell-_EditingToolsInternals.o src/.unitize/shotwell-_PluginsInternals.o src/.unitize/shotwell-_SlideshowInternals.o src/.unitize/shotwell-_PhotosInternals.o src/.unitize/shotwell-_PublishingInternals.o src/.unitize/shotwell-_LibraryInternals.o src/.unitize/shotwell-_DirectInternals.o src/.unitize/shotwell-_CoreInternals.o src/.unitize/shotwell-_SidebarInternals.o src/.unitize/shotwell-_EventsInternals.o src/.unitize/shotwell-_TagsInternals.o src/.unitize/shotwell-_CameraInternals.o src/.unitize/shotwell-_SearchesInternals.o src/.unitize/shotwell-_ConfigInternals.o src/.unitize/shotwell-_DataImportsInternals.o src/.unitize/shotwell-_FoldersInternals.o src/.unitize/shotwell-_Library_unitize_entry.o src/.unitize/shotwell-_Direct_unitize_entry.o shotwell-resource.o /hack/objdirs/pobj/shotwell-0.28.0/shotwell-0.28.0/src/plugins/.libs/libplugin.a /hack/objdirs/pobj/shotwell-0.28.0/shotwell-0.28.0/src/.libs/libgraphics-processor.a -L.libs -lgee-0.8 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -liconv -lpcre -lintl -lffi -lgmodule-2.0 -lz -lgexiv2 -lexiv2 -lm -lexpat -lgstbase-1.0 -lgstreamer-1.0 -lgstpbutils-1.0 -lgstvideo-1.0 -lorc-0.4 -lpthread -lgstaudio-1.0 -lgsttag-1.0 -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -lgthread-2.0 -lcairo -lpixman-1 -lfontconfig -lfreetype -lpng -lxcb-shm -lxcb -lxcb-render -lXrender -lX11 -lXext -lpangoft2-1.0 -lharfbuzz -lgraphite2 -lgdk_pixbuf-2.0 -lcairo-gobject -lXinerama -lXi -lXrandr -lXcursor -lXfixes -lXcomposite -lXdamage -lepoxy -latk-1.0 -latk-bridge-2.0 -ldbus-1 -latspi -lXtst -lexif -lgphoto2 -lgphoto2_port -lltdl -lraw -ljpeg -ljasper -llcms2 -lstdc++ -lxml2 -llzma -lsqlite3 -Wl,-rpath-link,/usr/local/lib,-rpath-link,/usr/X11R6/lib
/hack/objdirs/pobj/shotwell-0.28.0/shotwell-0.28.0/src/.libs/libgraphics-processor.a(src_libgraphics_processor_la-_transformation.o): In function `pixel_transformer_apply_transformations':
src/_transformation.c:(.text+0x6): undefined reference to `_pixel_transformer_apply_transformations'
/hack/objdirs/pobj/shotwell-0.28.0/shotwell-0.28.0/src/.libs/libgraphics-processor.a(src_libgraphics_processor_la-_transformation.o): In function `pixel_transformer_apply_transformation':
src/_transformation.c:(.text+0xaa): undefined reference to `_pixel_transformer_apply_transformations'
cc: error: linker command failed with exit code 1 (use -v to see invocation)
Comment 1 Jens Georg 2018-03-13 19:51:01 UTC
Also applicable to Linux and gcc; reproduced, currently investigating why
Comment 2 Jens Georg 2018-03-13 20:36:41 UTC
Created attachment 369634 [details] [review]
Fix undefined symbol error

Or: inline does not do what you expect it to do.

https://en.wikipedia.org/wiki/Inline_function#C99

We really want static inline here.
Comment 3 Antoine Jacoutot 2018-03-14 08:47:06 UTC
That fixes it :-)
Thank you.
Comment 4 Jørn Christensen 2018-03-16 05:57:56 UTC
This patch is not in master branch yet? I just checked out from scratch and the bug is still there.
Comment 5 Jens Georg 2018-03-16 07:53:56 UTC
No, sorry. I was busy otherwise