Fix undefined symbol error

Or: inline does not do what you expect it to do.

https://en.wikipedia.org/wiki/Inline_function#C99

We really want static inline here.

https://bugzilla.gnome.org/show_bug.cgi?id=794293